@@ -1,3 +1,7 @@
+2014-03-18 Jens Thoms Toerring    <jt@toerring.de>
+
+	* lib/objects.c: Speed-up for redraws
+
 2014-03-12 Jens Thoms Toerring    <jt@toerring.de>
 
 	* lib/menu.c: Fix by Lothar Esser added for bug in
